--- a/src/templates/sign-in.html
+++ b/src/templates/sign-in.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Sign In</title>
+    </head>
     <body>
-        <main>
-            <form>
-                <h1>Sign In</h1>
-                <label for="username">Username</label>
-                <input type="username" id="username" name="username" required>
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-                <button type="submit">Sign In</button>
-                <p>Don't have an account? <a>Sign Up</a></p>
-            </form>
-        </main>
+        <form>
+            <label for="username">Username</label>
+            <input type="username" id="username" name="username" required>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Sign In</button>
+            <p>Don't have an account? <a>Sign Up</a></p>
+        </form>
     </body>
 </html>
